subject to class directive

--- a/demo/subjectIdToDrv/index.html
+++ b/demo/subjectIdToDrv/index.html
@@ -30,12 +30,18 @@
         .speaking{
             background: #AF89D2;
         }
+
+        .speaking-subject{
+            border: 1px dotted #AF89D2;
+            box-sizing: border-box;
+        }
     </style>
     <div subject-id-to-class-drv="0">Math</div>
     <div subject-id-to-class-drv="1">Reading</div>
     <div subject-id-to-class-drv="2">Writing</div>
     <div subject-id-to-class-drv="3">Listening</div>
     <div subject-id-to-class-drv="4">Speaking</div>
+    <div subject-id-to-class-drv="4" class-suffix="-subject">Speaking-subject</div>
 
     <script src="angular/angular.js"></script>
 
