--- a/demo/scroll/index.html
+++ b/demo/scroll/index.html
@@ -15,16 +15,24 @@
         }
 
         .child{
-            width: 600px;
+            width: 200px;
             height: 50px;
-            margin: 20px;
+            margin: 20px 150px 0 150px;
             background: blue;
+        }
+
+        button{
+            margin-left: 573px;
+            margin-top: 15px;
+            width: 100px;
+            height: 50px;
         }
     </style>
 
-    <znk-scroll class="container">
+    <znk-scroll class="container" actions="scrollActions">
         <div class="child"></div>
     </znk-scroll>
+    <button ng-click="lastAnim = lastAnim ? 0 : -100;scrollActions.animate(lastAnim,1000,'cubic-bezier(1, 0.04, 0.58, 1)')">Animate</button>
     <script src="angular/angular.js"></script>
 
     <script src="components/scroll/module.js"></script>
