--- a/demo/svgIcon/index.html
+++ b/demo/svgIcon/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body ng-app="demoApp">
 
