--- a/demo/znkExercise/index.html
+++ b/demo/znkExercise/index.html
@@ -8,10 +8,14 @@
 <body ng-app="demoApp">
 
     <style>
+        body{
+            background: #f2f2f2;
+        }
+
         znk-exercise{
             height: 500px;
             width: 500px;
-            margin: 200px auto;
+            margin: 100px auto 0 auto;
             background: red;
         }
     </style>
