--- a/demo/znkExercise/index.html
+++ b/demo/znkExercise/index.html
@@ -37,13 +37,16 @@
 
     <script src="components/znkExercise/module.js"></script>
     <script src="components/znkExercise/utility/enum/platformEnum.js"></script>
+    <script src="components/znkExercise/utility/enum/znkExerciseViewModeEnum.js"></script>
     <script src="components/znkExercise/utility/directive/templateByPlatform.js"></script>
     <script src="components/znkExercise/core/znkExerciseDrv.js"></script>
+    <script src="components/znkExercise/core/znkExerciseDrvCtrl.js"></script>
     <script src="components/znkExercise/core/constant/znkExerciseEventsConst.js"></script>
     <script src="components/znkExercise/core/service/znkExerciseSrv.js"></script>
     <script src="components/znkExercise/core/service/questionTypesSrv.js"></script>
     <script src="components/znkExercise/core/directive/questionBuilderDrv.js"></script>
     <script src="components/znkExercise/core/directive/answersBuilderDrv.js"></script>
+    <script src="components/znkExercise/core/directive/znkExerciseBtnSectionDrv.js"></script>
 
     <script src="demoApp.js"></script>
 </body>
