--- a/demo/znkExercise/index.html
+++ b/demo/znkExercise/index.html
@@ -21,7 +21,7 @@
     </style>
 
     <znk-exercise ng-model="results" questions="[
-        {__type: 1},{__type: 2},{__type: 3},{__type: 1},{__type: 2}
+        {__type: 1,id:1},{__type: 2,id:2},{__type: 3,id:3},{__type: 1,id:4},{__type: 2,id:5}
         ]">
     </znk-exercise>
     <script src="angular/angular.js"></script>
