--- a/demo/znkExercise/index.html
+++ b/demo/znkExercise/index.html
@@ -16,12 +16,23 @@
             height: 500px;
             width: 500px;
             margin: 100px auto 0 auto;
-            background: red;
+            background: #E2E2E2;
         }
     </style>
 
     <znk-exercise ng-model="results" questions="[
-        {__type: 1,id:1},{__type: 2,id:2},{__type: 3,id:3},{__type: 1,id:4},{__type: 2,id:5}
+            {__type: 1, id:1, answerTypeId: 0, answers:[
+                {
+                    id:1,
+                    content: '<span>answer1</span>'
+                },
+                {id:2},
+                {id:3}
+            ]},
+            {__type: 2,id:2},
+            {__type: 3,id:3},
+            {__type: 1,id:4},
+            {__type: 2,id:5}
         ]">
     </znk-exercise>
     <script src="angular/angular.js"></script>
@@ -30,23 +41,33 @@
 
     <script src="components/enums/module.js"></script>
     <script src="components/enums/services/enumSrv.js"></script>
+    <script src="components/enums/enums/answerTypeEnum.js"></script>
 
     <script src="components/svgIcon/module.js"></script>
     <script src="components/svgIcon/svgIconDrv.js"></script>
     <script src="components/svgIcon/svgIconSrv.js"></script>
 
     <script src="components/znkExercise/module.js"></script>
+
     <script src="components/znkExercise/utility/enum/platformEnum.js"></script>
     <script src="components/znkExercise/utility/enum/znkExerciseViewModeEnum.js"></script>
     <script src="components/znkExercise/utility/directive/templateByPlatform.js"></script>
+    <script src="components/znkExercise/utility/service/znkExerciseUtilitySrv.js"></script>
+
     <script src="components/znkExercise/core/znkExerciseDrv.js"></script>
     <script src="components/znkExercise/core/znkExerciseDrvCtrl.js"></script>
+
     <script src="components/znkExercise/core/constant/znkExerciseEventsConst.js"></script>
+
     <script src="components/znkExercise/core/service/znkExerciseSrv.js"></script>
     <script src="components/znkExercise/core/service/questionTypesSrv.js"></script>
+
     <script src="components/znkExercise/core/directive/questionBuilderDrv.js"></script>
-    <script src="components/znkExercise/core/directive/answersBuilderDrv.js"></script>
     <script src="components/znkExercise/core/directive/znkExerciseBtnSectionDrv.js"></script>
+
+    <script src="components/znkExercise/answerTypes/answerBuilderDrv.js"></script>
+    <script src="components/znkExercise/answerTypes/answerComponents/selectAnswerDrv.js"></script>
+    <script src="components/znkExercise/answerTypes/directives/markupDrv.js"></script>
 
     <script src="demoApp.js"></script>
 </body>
