slide direction limitaion were added.

--- a/demo/znkExercise/index.html
+++ b/demo/znkExercise/index.html
@@ -38,6 +38,7 @@
 
     <script src="components/znkExercise/utility/enum/platformEnum.js"></script>
     <script src="components/znkExercise/utility/enum/znkExerciseViewModeEnum.js"></script>
+    <script src="components/znkExercise/utility/enum/ZnkExerciseSlideDirectionEnum.js"></script>
     <script src="components/znkExercise/utility/directive/templateByPlatform.js"></script>
     <script src="components/znkExercise/utility/service/znkExerciseUtilitySrv.js"></script>
 
