slide direction limitaion were added.

--- a/demo/znkExercise/index.html
+++ b/demo/znkExercise/index.html
@@ -52,6 +52,7 @@
 
     <script src="components/znkExercise/core/directive/questionBuilderDrv.js"></script>
     <script src="components/znkExercise/core/directive/znkExerciseBtnSectionDrv.js"></script>
+    <script src="components/znkExercise/core/directive/questionsCarouselDrv.js"></script>
 
     <script src="components/znkExercise/answerTypes/answerBuilderDrv.js"></script>
     <script src="components/znkExercise/answerTypes/answerComponents/selectAnswerDrv.js"></script>
