--- a/demo/znkExercise/index.html
+++ b/demo/znkExercise/index.html
@@ -28,7 +28,7 @@
     <button ng-click="addQuestion()">Add question</button>
     <script src="angular/angular.js"></script>
     <script src="angular-touch/angular-touch.js"></script>
-    <script src="angular-carousel/dist/angular-carousel.js"></script>
+    <script src="Swiper/dist/js/swiper.js"></script>
 
     <script src="components/enums/module.js"></script>
     <script src="components/enums/services/enumSrv.js"></script>
@@ -57,6 +57,7 @@
     <script src="components/znkExercise/core/directive/questionBuilderDrv.js"></script>
     <script src="components/znkExercise/core/directive/znkExerciseBtnSectionDrv.js"></script>
     <script src="components/znkExercise/core/directive/questionsCarouselDrv.js"></script>
+    <script src="components/znkExercise/core/directive/znkSwiperDrv.js"></script>
 
     <script src="components/znkExercise/answerTypes/answerBuilderDrv.js"></script>
     <script src="components/znkExercise/answerTypes/answerComponents/selectAnswerDrv.js"></script>
