demo style was modified

--- a/demo/znkExercise/index.html
+++ b/demo/znkExercise/index.html
@@ -15,7 +15,7 @@
         znk-exercise{
             height: 500px;
             width: 500px;
-            margin: 100px auto 0 auto;
+            margin: 100px 100px 0 auto;
             background: #E2E2E2;
             display: inline-block;
         }
