--- a/demo/znkExercise/index.html
+++ b/demo/znkExercise/index.html
@@ -32,8 +32,7 @@
     <znk-exercise ng-model="results"
                   questions="questions"
                   settings="settings"
-                  actions="actions"
-                  ng-model="results">
+                  actions="actions">
     </znk-exercise>
     <script src="angular/angular.js"></script>
     <script src="angular-touch/angular-touch.js"></script>
@@ -70,6 +69,7 @@
 
     <script src="components/znkExercise/answerTypes/answerBuilderDrv.js"></script>
     <script src="components/znkExercise/answerTypes/answerComponents/selectAnswerDrv.js"></script>
+    <script src="components/znkExercise/answerTypes/answerComponents/rateAnswerDrv.js"></script>
     <script src="components/znkExercise/answerTypes/directives/markupDrv.js"></script>
 
     <script src="demoApp.js"></script>
