--- a/demo/znkExercise/index.html
+++ b/demo/znkExercise/index.html
@@ -68,9 +68,14 @@
     <script src="components/znkExercise/core/directive/questionsCarouselDrv.js"></script>
     <script src="components/znkExercise/core/directive/znkSwiperDrv.js"></script>
 
+    <script src="components/znkExercise/pager/znkExercisePagerDrv.js"></script>
+
     <script src="components/znkExercise/answerTypes/answerBuilderDrv.js"></script>
     <script src="components/znkExercise/answerTypes/answerComponents/selectAnswerDrv.js"></script>
     <script src="components/znkExercise/answerTypes/directives/markupDrv.js"></script>
+
+    <script src="components/scroll/module.js"></script>
+    <script src="components/scroll/znkScrollDrv.js"></script>
 
     <script src="demoApp.js"></script>
 </body>
