pager was added to znk exercise

--- a/demo/znkExercise/index.html
+++ b/demo/znkExercise/index.html
@@ -28,6 +28,8 @@
         <button ng-click="setSlideDirection(2)">set slide direction all</button>
         <button ng-click="setSlideDirection(3)">set slide direction right</button>
         <button ng-click="setSlideDirection(4)">set slide direction left</button>
+        <div></div>
+        <button ng-click="showOrHidePager()">show hide pager</button>
     </div>
     <znk-exercise ng-model="results"
                   questions="questions"
