fixed notes for pull request

--- a/demo/subjectIdToAttrDrv/index.html
+++ b/demo/subjectIdToAttrDrv/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body ng-app="demoApp" ng-controller="main">
+<body ng-app="demoApp" ng-controller="subjectIdToAttrDrvDemoCtrl">
     <style>
         div{
             width: 100px;
@@ -37,7 +37,7 @@
         }
     </style>
 
-    <div subject-id-to-attr-drv="0" context-attr="class,name" znk-prefix="{{prefix}}" znk-suffix="cs,ns">Math</div>
+    <div subject-id-to-attr-drv="0" context-attr="class,name" znk-prefix="{{prefix}}" znk-suffix="">Math</div>
     <div subject-id-to-attr-drv="1">Reading</div>
     <div subject-id-to-attr-drv="2">Writing</div>
     <div subject-id-to-attr-drv="3">Listening</div>
