removed znk from prefix and suffix

--- a/demo/subjectIdToAttrDrv/index.html
+++ b/demo/subjectIdToAttrDrv/index.html
@@ -37,7 +37,7 @@
         }
     </style>
 
-    <div subject-id-to-attr-drv="0" context-attr="class,name" znk-prefix="{{prefix}}" znk-suffix="">Math</div>
+    <div subject-id-to-attr-drv="0" context-attr="class,name" prefix="{{prefix}}" suffix="">Math</div>
     <div subject-id-to-attr-drv="1">Reading</div>
     <div subject-id-to-attr-drv="2">Writing</div>
     <div subject-id-to-attr-drv="3">Listening</div>
