removed znk from prefix and suffix

--- a/demo/subjectIdToAttrDrv/index.html
+++ b/demo/subjectIdToAttrDrv/index.html
@@ -42,7 +42,7 @@
     <div subject-id-to-attr-drv="2">Writing</div>
     <div subject-id-to-attr-drv="3">Listening</div>
     <div subject-id-to-attr-drv="4">Speaking</div>
-    <div subject-id-to-attr-drv="4" znk-suffix="subject">Speaking-subject</div>
+    <div subject-id-to-attr-drv="4" suffix="subject">Speaking-subject</div>
 
 
     <script src="angular/angular.js"></script>
