--- a/demo/popUp/index.html
+++ b/demo/popUp/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<conformationn">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -20,8 +20,9 @@
         }
     </style>
     <button ng-click="showPopup('warning')">Warning pop</button>
-    <button ng-click="showPopup('error')">Warning pop</button>
-    <button ng-click="showPopup('success')">Warning pop</button>
+    <button ng-click="showPopup('error')">Error pop</button>
+    <button ng-click="showPopup('error conformation')">Error conformation pop</button>
+    <button ng-click="showPopup('success')">Success pop</button>
     <!--<button ng-click="setSlideDirection(1)">set slide direction none</button>-->
     <!--<button ng-click="setSlideDirection(2)">set slide direction all</button>-->
     <!--<button ng-click="setSlideDirection(3)">set slide direction right</button>-->
