- added wrapper to znkExercise done-btn - added class to indicate if pager is shown

--- a/demo/znkExercise/index.html
+++ b/demo/znkExercise/index.html
@@ -39,7 +39,7 @@
     <znk-exercise ng-model="results"
                   questions="questions"
                   settings="settings"
-                  actions="actions"
+                  actions="d.actions"
                   ng-if="!hideExercise">
     </znk-exercise>
     <script src="angular/angular.js"></script>
