- class now adds to existing class instead of overriding

--- a/demo/subjectIdToAttrDrv/index.html
+++ b/demo/subjectIdToAttrDrv/index.html
@@ -37,12 +37,12 @@
         }
     </style>
 
-    <div subject-id-to-attr-drv="0" context-attr="class,name" prefix="{{prefix}}" suffix="">Math</div>
+    <div subject-id-to-attr-drv="0" class="myClass" context-attr="class,class" prefix="1,2" suffix="1,2">Test</div>
     <div subject-id-to-attr-drv="1">Reading</div>
     <div subject-id-to-attr-drv="2">Writing</div>
     <div subject-id-to-attr-drv="3">Listening</div>
     <div subject-id-to-attr-drv="4">Speaking</div>
-    <div subject-id-to-attr-drv="4" suffix="subject">Speaking-subject</div>
+    <div subject-id-to-attr-drv="4">Speaking-subject</div>
 
 
     <script src="angular/angular.js"></script>
