--- a/demo/videoCtrlDrv/index.html
+++ b/demo/videoCtrlDrv/index.html
@@ -31,8 +31,8 @@
 </style>
 
 
- <video controls video-ctrl-drv = ""   preload="metadata" poster="http://corrupt-system.de/assets/media/sintel/sintel-trailer.jpg">
-	 <source src = "http://d1qqqwawt7o27r.cloudfront.net/videos/questions/176.mp4" type = "video/mp4"/>
+ <video controls video-ctrl-drv = ""   preload="metadata" poster="" default-poster="http://corrupt-system.de/assets/media/sintel/sintel-trailer.jpg" video-not-avail="<div class='video_not_available' ></div>">
+	 <source src = "http://d1qqqwawt7o27r.cloudfront.net/videos/questions/1768.mp4" type = "video/mp4"/>
  </video>
 
 
