--- a/demo/videoCtrlDrv/index.html
+++ b/demo/videoCtrlDrv/index.html
@@ -31,7 +31,7 @@
 </style>
 
 
- <video controls video-ctrl-drv = ""   preload="metadata" poster="" default-poster="http://corrupt-system.de/assets/media/sintel/sintel-trailer.jpg" video-not-avail="<div class=&quot;video_not_available&quot; ></div>">
+ <video controls video-ctrl-drv = ""   preload="metadata" poster="" default-poster="http://corrupt-system.de/assets/media/sintel/sintel-trailer.jpg" >
 	 <source src = "http://d1qqqwawt7o27r.cloudfront.net/videos/questions/1768.mp4" type = "video/mp4"/>
  </video>
 
