--- a/demo/subjectIdToAttrDrv/index.html
+++ b/demo/subjectIdToAttrDrv/index.html
@@ -50,6 +50,8 @@
     <script src="components/enums/module.js"></script>
     <script src="components/enums/services/enumSrv.js"></script>
     <script src="components/enums/enums/subjectEnum.js"></script>
+    <script src="components/svgIcon/module.js"></script>
+    <script src="components/svgIcon/svgIconSrv.js"></script>
 
     <script src="components/general/module.js"></script>
     <script src="components/general/subjectIdToAttrDrv.js"></script>
