--- a/demo/videoCtrlDrv/index.html
+++ b/demo/videoCtrlDrv/index.html
@@ -37,7 +37,14 @@
 
 
 <script src = "angular/angular.js"></script>
-<script src = "components/general/moduleMutual.js"></script>
+
+<script src="components/enums/module.js"></script>
+<script src="components/enums/services/enumSrv.js"></script>
+<script src="components/enums/enums/subjectEnum.js"></script>
+<script src="components/svgIcon/module.js"></script>
+<script src="components/svgIcon/svgIconSrv.js"></script>
+
+<script src = "components/general/module.js"></script>
 <script src = "components/general/videoCtrlDrv.js"></script>
 <script src = "demoApp.js"></script>
 </body>
