making sure the video src attribute can be retrieve from angular expression

--- a/demo/videoCtrlDrv/index.html
+++ b/demo/videoCtrlDrv/index.html
@@ -17,7 +17,7 @@
 	                width       : 454px;
 	                height      : 254px;
 	                padding-top : 50px;
-
+	                visibility: hidden;
                 }
                 .video_not_available
                 {
