video control was added

--- a/demo/videoCtrlDrv/index.html
+++ b/demo/videoCtrlDrv/index.html
@@ -22,9 +22,8 @@
     </video>
     <video controls
            video-ctrl-drv
-           on-video-error="videoErrorHandler()">
-        <source type = "video/mp4"
-                src="dummy"/>
+           on-video-error="videoErrorHandler()"
+           src="dummy">
     </video>
 </div>
 
