added attr videoErrorPoster

--- a/demo/videoCtrlDrv/index.html
+++ b/demo/videoCtrlDrv/index.html
@@ -23,7 +23,8 @@
     <video controls
            video-ctrl-drv
            on-video-error="videoErrorHandler()"
-           src="dummy">
+           video-error-poster="http://mis.ihc.gov.pk/img/no-video.jpg"
+           ng-src="videoUrl">
     </video>
 </div>
 
