--- a/demo/znkExercise/index.html
+++ b/demo/znkExercise/index.html
@@ -16,7 +16,7 @@
             height: 500px;
             width: 500px;
             margin: 100px 100px 0 auto;
-            background: #E2E2E2;
+            background: white;
             display: inline-block;
         }
     </style>
@@ -43,7 +43,6 @@
                   ng-if="!hideExercise">
     </znk-exercise>
     <script src="angular/angular.js"></script>
-    <script src="angular-touch/angular-touch.js"></script>
     <script src="Swiper/dist/js/swiper.js"></script>
 
     <script src="components/enums/module.js"></script>
@@ -79,6 +78,7 @@
 
     <script src="components/znkExercise/answerTypes/answerBuilderDrv.js"></script>
     <script src="components/znkExercise/answerTypes/answerComponents/selectAnswerDrv.js"></script>
+    <script src="components/znkExercise/answerTypes/answerComponents/znkExerciseAnswersSrv.js"></script>
     <script src="components/znkExercise/answerTypes/answerComponents/rateAnswerDrv.js"></script>
     <script src="components/znkExercise/answerTypes/directives/markupDrv.js"></script>
 
