--- a/demo/znkExercise/index.html
+++ b/demo/znkExercise/index.html
@@ -73,6 +73,7 @@
     <script src="components/znkExercise/core/directive/znkExerciseBtnSectionDrv.js"></script>
     <script src="components/znkExercise/core/directive/questionsCarouselDrv.js"></script>
     <script src="components/znkExercise/core/directive/znkSwiperDrv.js"></script>
+    <script src="components/znkExercise/core/directive/rateAnswerFormatterParser.js"></script>
 
     <script src="components/znkExercise/pager/znkExercisePagerDrv.js"></script>
 
