--- a/demo/svgIcon/index.html
+++ b/demo/svgIcon/index.html
@@ -19,10 +19,15 @@
         .checkmark2 .st0{
             stroke: blue;
         }
+
+        .checkmark3 .st0{
+            stroke: green;
+        }
     </style>
 
     <svg-icon class="checkmark checkmark1" name="checkmark"></svg-icon>
-    <svg-icon class="checkmark checkmark2" name="checkmark"></svg-icon>
+    <svg-icon class="checkmark checkmark2" name="{{'checkmark'}}"></svg-icon>
+    <svg-icon class="checkmark checkmark3"></svg-icon>
 
 
     <script src="angular/angular.js"></script>
@@ -33,5 +38,8 @@
     <script src="components/svgIcon/svgIconSrv.js"></script>
 
     <script src="demoApp.js"></script>
+    <script>
+
+    </script>
 </body>
 </html>
