svg icon bug was fixed

--- a/demo/svgIcon/index.html
+++ b/demo/svgIcon/index.html
@@ -27,7 +27,7 @@
 
     <svg-icon class="checkmark checkmark1" name="checkmark"></svg-icon>
     <svg-icon class="checkmark checkmark2" name="{{'checkmark'}}"></svg-icon>
-    <svg-icon class="checkmark checkmark3"></svg-icon>
+    <svg-icon class="checkmark3"></svg-icon>
 
 
     <script src="angular/angular.js"></script>
