--- a/demo/znkExercise/index.html
+++ b/demo/znkExercise/index.html
@@ -90,6 +90,7 @@
     <script src="components/znkExercise/answerTypes/answerComponents/selectAnswerDrv.js"></script>
     <script src="components/znkExercise/answerTypes/answerComponents/znkExerciseAnswersSrv.js"></script>
     <script src="components/znkExercise/answerTypes/answerComponents/rateAnswerDrv.js"></script>
+    <script src="components/znkExercise/answerTypes/answerComponents/freeTextAnswerDrv.js"></script>
     <script src="components/znkExercise/answerTypes/directives/markupDrv.js"></script>
 
     <script src="components/scroll/module.js"></script>
