--- a/demo/znkExercise/index.html
+++ b/demo/znkExercise/index.html
@@ -58,6 +58,9 @@
     <script src="components/enums/services/enumSrv.js"></script>
     <script src="components/enums/enums/answerTypeEnum.js"></script>
 
+    <script src="components/autofocus/module.js"></script>
+    <script src="components/autofocus/autofocusDrv.js"></script>
+
     <script src="components/svgIcon/module.js"></script>
     <script src="components/svgIcon/svgIconDrv.js"></script>
     <script src="components/svgIcon/svgIconSrv.js"></script>
