- fixed gulpfile - added deviceNotSupported directive

--- a/demo/deviceNotSupported/index.html
+++ b/demo/deviceNotSupported/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="../../dist/main.css">
+    <link rel="stylesheet" href="deviceNotSupported/main.css">
     <style>
 
     </style>
@@ -34,8 +34,7 @@
 <device-not-supported></device-not-supported>
 
     <script src="angular/angular.js"></script>
-    <script src="components/deviceNotSupported/module.js"></script>
-    <script src="components/deviceNotSupported/deviceNotSupported.directive.js"></script>
+    <script src="deviceNotSupported/deviceNotSupported.js"></script>
     <script src="demoApp.js"></script>
 </body>
 </html>
