--- a/demo/popUp/index.html
+++ b/demo/popUp/index.html
@@ -17,21 +17,10 @@
         }
     </style>
     <script src="angular/angular.js"></script>
-
-    <script src="components/enums/module.js"></script>
-    <script src="components/enums/services/enumSrv.js"></script>
-    <script src="components/enums/enums/answerTypeEnum.js"></script>
-
-    <script src="components/svgIcon/module.js"></script>
-    <script src="components/svgIcon/svgIconDrv.js"></script>
-    <script src="components/svgIcon/svgIconSrv.js"></script>
-
-    <script src="components/autofocus/module.js"></script>
-    <script src="components/autofocus/autofocusDrv.js"></script>
-
-    <script src="components/popUp/module.js"></script>
-    <script src="components/popUp/popUpSrv.js"></script>
-
+    <script src="enum/enum.js"></script>
+    <script src="svgIcon/svgIcon.js"></script>
+    <script src="autofocus/autofocus.js"></script>
+    <script src="popUp/popUp.js"></script>
     <script src="demoApp.js"></script>
 </head>
 <body ng-app="demoApp" ng-controller="Main">
