svg icon style was modified

--- a/demo/svgIcon/index.html
+++ b/demo/svgIcon/index.html
@@ -29,13 +29,9 @@
     <svg-icon class="checkmark checkmark2" name="{{'checkmark'}}"></svg-icon>
     <svg-icon class="checkmark3"></svg-icon>
 
-
     <script src="angular/angular.js"></script>
 
-
-    <script src="components/svgIcon/module.js"></script>
-    <script src="components/svgIcon/svgIconDrv.js"></script>
-    <script src="components/svgIcon/svgIconSrv.js"></script>
+    <script src="svgIcon/svgIcon.js"></script>
 
     <script src="demoApp.js"></script>
     <script>
