workouts exercise was added

--- a/demo/exerciseUtility/index.html
+++ b/demo/exerciseUtility/index.html
@@ -52,6 +52,9 @@
                     <label>workout id</label>
                     <input type="number" ng-model="workoutIdToRetrieveData">
                 </div>
+                <div>id: {{exerciseContent.id}}</div>
+                <div>category id: {{exerciseContent.categoryId}}</div>
+                <div>name: {{exerciseContent.name}}</div>
             </div>
         </div>
     </div>
@@ -65,8 +68,10 @@
     <script src="storage/storage.js"></script>
     <script src="exerciseUtility/exerciseUtility.js"></script>
     <script src="exerciseResult/exerciseResult.js"></script>
+    <script src="content/content.js"></script>
 
     <script src="demoApp.js"></script>
     <script src="storagesConfig.js"></script>
+    <script src="contentConfig.js"></script>
 </body>
 </html>
