workouts exercise was added

--- a/demo/exerciseUtility/index.html
+++ b/demo/exerciseUtility/index.html
@@ -24,6 +24,7 @@
             margin-bottom: 20px;
         }
     </style>
+    <div style="text-align: center;font-size: 26px;">Workouts Service</div>
     <div class="container">
         <div class="item">
             <button ng-click="getWorkouts()">Get all workouts</button>
