--- a/demo/znkExercise/index.html
+++ b/demo/znkExercise/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="znkExercise/main.css">
+    <link rel="stylesheet" href="scroll/main.css">
+    <link rel="stylesheet" href="svgIcon/main.css">
+    <link rel="stylesheet" href="Swiper/dist/css/swiper.css">
 </head>
 <body ng-app="demoApp" ng-controller="Main">
 
@@ -54,50 +57,19 @@
     <script src="angular-animate/angular-animate.js"></script>
     <script src="Swiper/dist/js/swiper.js"></script>
 
-    <script src="components/enums/module.js"></script>
-    <script src="components/enums/services/enumSrv.js"></script>
-    <script src="components/enums/enums/answerTypeEnum.js"></script>
+    <script src="enum/enum.js"></script>
 
-    <script src="components/autofocus/module.js"></script>
-    <script src="components/autofocus/autofocusDrv.js"></script>
+    <script src="autofocus/autofocus.js"></script>
 
-    <script src="components/svgIcon/module.js"></script>
-    <script src="components/svgIcon/svgIconDrv.js"></script>
-    <script src="components/svgIcon/svgIconSrv.js"></script>
+    <script src="svgIcon/svgIcon.js"></script>
 
-    <script src="components/znkExercise/module.js"></script>
+    <script src="znkExercise/znkExercise.js"></script>
+    <script src="znkExercise/templates.js"></script>
 
-    <script src="components/znkExercise/utility/enum/platformEnum.js"></script>
-    <script src="components/znkExercise/utility/enum/znkExerciseViewModeEnum.js"></script>
-    <script src="components/znkExercise/utility/enum/ZnkExerciseSlideDirectionEnum.js"></script>
-    <script src="components/znkExercise/utility/directive/templateByPlatform.js"></script>
-    <script src="components/znkExercise/utility/service/znkExerciseUtilitySrv.js"></script>
+    <script src="exerciseUtility/exerciseUtility.js"></script>
 
-    <script src="components/znkExercise/core/znkExerciseDrv.js"></script>
-    <script src="components/znkExercise/core/znkExerciseDrvCtrl.js"></script>
-
-    <script src="components/znkExercise/core/constant/znkExerciseEventsConst.js"></script>
-
-    <script src="components/znkExercise/core/service/znkExerciseSrv.js"></script>
-    <script src="components/znkExercise/core/service/questionTypesSrv.js"></script>
-
-    <script src="components/znkExercise/core/directive/questionBuilderDrv.js"></script>
-    <script src="components/znkExercise/core/directive/znkExerciseBtnSectionDrv.js"></script>
-    <script src="components/znkExercise/core/directive/questionsCarouselDrv.js"></script>
-    <script src="components/znkExercise/core/directive/znkSwiperDrv.js"></script>
-    <script src="components/znkExercise/core/directive/rateAnswerFormatterParser.js"></script>
-
-    <script src="components/znkExercise/pager/znkExercisePagerDrv.js"></script>
-
-    <script src="components/znkExercise/answerTypes/answerBuilderDrv.js"></script>
-    <script src="components/znkExercise/answerTypes/answerComponents/selectAnswerDrv.js"></script>
-    <script src="components/znkExercise/answerTypes/answerComponents/znkExerciseAnswersSrv.js"></script>
-    <script src="components/znkExercise/answerTypes/answerComponents/rateAnswerDrv.js"></script>
-    <script src="components/znkExercise/answerTypes/answerComponents/freeTextAnswerDrv.js"></script>
-    <script src="components/znkExercise/answerTypes/directives/markupDrv.js"></script>
-
-    <script src="components/scroll/module.js"></script>
-    <script src="components/scroll/znkScrollDrv.js"></script>
+    <script src="scroll/scroll.js"></script>
+    <script src="scroll/templates.js"></script>
 
     <script src="demoApp.js"></script>
 </body>
