--- a/demo/popUp/index.html
+++ b/demo/popUp/index.html
@@ -24,7 +24,7 @@
     <script src="demoApp.js"></script>
 </head>
 <body ng-app="demoApp" ng-controller="Main">
-    <button ng-click="showPopup('warning')">Warning pop</button>
+    <button ng-click="showPopup('warning')">confirmation pop</button>
     <button ng-click="showPopup('error')">Error pop</button>
     <button ng-click="showPopup('error conformation')">Error conformation pop</button>
     <button ng-click="showPopup('success')">Success pop</button>
