add fallback for content getter

--- a/demo/content/index.html
+++ b/demo/content/index.html
@@ -9,8 +9,7 @@
     <div ng-controller="demoCtrl"></div>
 
     <script src="angular/angular.js"></script>
-    <script src="components/content/module.js"></script>
-    <script src="components/content/services/contentSrv.js"></script>
+    <script src="content/content.js"></script>
 
     <script src="demoApp.js"></script>
 
