changes in svgIcon style and adding animation to freeTextAnswer

--- a/demo/znkExercise/index.html
+++ b/demo/znkExercise/index.html
@@ -57,12 +57,15 @@
     <script src="angular-animate/angular-animate.js"></script>
     <script src="Swiper/dist/js/swiper.js"></script>
 
+    <script src="config/config.js"></script>
+    <script src="storage/storage.js"></script>
+    <script src="exerciseResult/exerciseResult.js"></script>
+    <script src="utility/utility.js"></script>
+    <script src="contentAvail/contentAvail.js"></script>
+    <script src="content/content.js"></script>
     <script src="enum/enum.js"></script>
-
     <script src="autofocus/autofocus.js"></script>
-
     <script src="svgIcon/svgIcon.js"></script>
-
     <script src="znkExercise/znkExercise.js"></script>
     <script src="znkExercise/templates.js"></script>
 
