--- a/demo/popUp/index.html
+++ b/demo/popUp/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="popUp/main.css">
     <style>
         body{
             background: #f2f2f2;
@@ -21,6 +21,7 @@
     <script src="svgIcon/svgIcon.js"></script>
     <script src="autofocus/autofocus.js"></script>
     <script src="popUp/popUp.js"></script>
+    <script src="popUp/templates.js"></script>
     <script src="demoApp.js"></script>
 </head>
 <body ng-app="demoApp" ng-controller="Main">
