--- a/demo/znkExercise/index.html
+++ b/demo/znkExercise/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="svgIcon/main.css">
     <link rel="stylesheet" href="Swiper/dist/css/swiper.css">
 </head>
-<body ng-app="demoApp" ng-controller="Main">
+<body ng-app="demo" ng-controller="Main">
 
     <style>
         body{
@@ -74,6 +74,7 @@
     <script src="scroll/scroll.js"></script>
     <script src="scroll/templates.js"></script>
 
-    <script src="demoApp.js"></script>
+    <script src="demo.js"></script>
+    <script src="storagesConfig.js"></script>
 </body>
 </html>
