- working on duration filter

--- a/demo/filters/index.html
+++ b/demo/filters/index.html
@@ -9,7 +9,7 @@
     <p><time>{{59 | formatDuration}}</time></p>
     <p><time>{{80 | formatDuration}}</time></p>
     <p><time>{{600 | formatDuration}}</time></p>
-    <p><time>{{3660 | formatDuration}}</time></p>
+    <p><time>{{3660 | formatDuration:'ss, mm, hours:hh'}}</time></p>
 
 <script src="angular/angular.js"></script>
 <script src="filters/filters.js"></script>
