--- a/demo/filters/index.html
+++ b/demo/filters/index.html
@@ -9,7 +9,10 @@
     <p><time>{{59 | formatDuration}}</time></p>
     <p><time>{{80 | formatDuration}}</time></p>
     <p><time>{{600 | formatDuration}}</time></p>
-    <p><time>{{3660 | formatDuration:'ss, mm, hours:hh'}}</time></p>
+    <p><time>{{3660 | formatDuration}}</time></p>
+
+    <p>With Custom Expression:<br>
+        <time>{{3660 | formatDuration:'Hours: hh, Minutes: mm, Seconds: ss'}}</time></p>
 
 <script src="angular/angular.js"></script>
 <script src="filters/filters.js"></script>
