--- a/demo/filters/index.html
+++ b/demo/filters/index.html
@@ -5,14 +5,22 @@
     <title>Filters | Demo</title>
 </head>
 <body ng-app="demoApp">
-    <h2>formatDuration Filter</h2>
-    <p><time>{{59 | formatDuration}}</time></p>
-    <p><time>{{80 | formatDuration}}</time></p>
-    <p><time>{{600 | formatDuration}}</time></p>
-    <p><time>{{3660 | formatDuration}}</time></p>
+<h2>formatDuration Filter</h2>
+<p><time>{{59 | formatDuration}}</time></p>
+<p><time>{{80 | formatDuration}}</time></p>
+<p><time>{{600 | formatDuration}}</time></p>
+<p><time>{{3660 | formatDuration}}</time></p>
 
-    <p>With Custom Expression:<br>
-        <time>{{3660 | formatDuration:'Hours: hh, Minutes: mm, Seconds: ss'}}</time></p>
+<p>With Custom Expression:<br>
+    <time>{{3660 | formatDuration:'Hours: hh, Minutes: mm, Seconds: ss'}}</time></p>
+
+
+<h2>Custom filter to display exercise duration formatted specifically for the dashboard review grid (Uses formatDuration Filter)</h2>
+
+<p><time>{{59 | dashboardReviewDuration}}</time></p>
+<p><time>{{80 | dashboardReviewDuration}}</time></p>
+<p><time>{{3666 | dashboardReviewDuration}}</time></p>
+
 
 <script src="angular/angular.js"></script>
 <script src="filters/filters.js"></script>
