--- a/demo/filters/index.html
+++ b/demo/filters/index.html
@@ -6,7 +6,7 @@
 </head>
 <body ng-app="demoApp">
 <h2>formatDuration Filter</h2>
-<p><time>{{59.000111 | formatDuration}}</time></p>
+<p><time>{{'undefined' | formatDuration}}</time></p>
 <p><time>{{80.5 | formatDuration}}</time></p>
 <p><time>{{600.453 | formatDuration}}</time></p>
 <p><time>{{3660.9 | formatDuration}}</time></p>
