Ran/adding format time filter (#166)
* - added formatTime filter

* demo

* - commiting dist

* - build and jshint

* - added undefined check

* - working on duration filter

* - working on duration filter

* - changes to demo

* - changes to filter

* - changes to filter

* - moved dashboard filter to dashboard

* - moved dashboard filter to dashboard

* - moved dashboard filter to dashboard

* - working on formatDuration filter

* - working on formatDuration filter

--- a/demo/filters/index.html
+++ b/demo/filters/index.html
@@ -6,10 +6,10 @@
 </head>
 <body ng-app="demoApp">
 <h2>formatDuration Filter</h2>
-<p><time>{{59 | formatDuration}}</time></p>
-<p><time>{{80 | formatDuration}}</time></p>
-<p><time>{{600 | formatDuration}}</time></p>
-<p><time>{{3660 | formatDuration}}</time></p>
+<p><time>{{'undefined' | formatDuration}}</time></p>
+<p><time>{{80.5 | formatDuration}}</time></p>
+<p><time>{{600.453 | formatDuration}}</time></p>
+<p><time>{{3660.9 | formatDuration}}</time></p>
 
 <p>With Custom Expression:<br>
     <time>{{3660 | formatDuration:'Hours: hh, Minutes: mm, Seconds: ss'}}</time></p>
