--- a/demo/exerciseDataGetters/index.html
+++ b/demo/exerciseDataGetters/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="main.css">
+    <!-- bower:css -->
+    <link rel="stylesheet" href="Swiper/dist/css/swiper.css" />
+    <!-- endbower -->
 </head>
 <body ng-app="demo" ng-controller="Main">
 
@@ -59,20 +62,18 @@
             </div>
         </div>
     </div>
+    <!-- bower:js -->
     <script src="angular/angular.js"></script>
-    <script src="firebase/firebase-debug.js"></script>
+    <script src="angular-animate/angular-animate.js"></script>
+    <script src="Swiper/dist/js/swiper.js"></script>
+    <script src="firebase/firebase.js"></script>
+    <!-- endbower -->
 
-    <script src="config/config.js"></script>
-    <script src="utility/utility.js"></script>
-    <script src="contentAvail/contentAvail.js"></script>
-    <script src="enum/enum.js"></script>
-    <script src="storage/storage.js"></script>
-    <script src="exerciseUtility/exerciseUtility.js"></script>
-    <script src="exerciseResult/exerciseResult.js"></script>
-    <script src="content/content.js"></script>
+    <script src="main.js"></script>
 
     <script src="demoApp.js"></script>
     <script src="storagesConfig.js"></script>
     <script src="contentConfig.js"></script>
+    <script src="env.service.js"></script>
 </body>
 </html>
