--- a/demo/znkAudioPlayer/index.html
+++ b/demo/znkAudioPlayer/index.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="znkAudioPlayer/main.css">
+    <link rel="stylesheet" href="main.css">
     <style>
-        body{
+        body {
             background: #f2f2f2;
+        }
+
+        .znk-image-audio-wrapper{
+            width:450px;
+
         }
     </style>
 
@@ -19,11 +24,14 @@
 </head>
 
 <body ng-app="demo" ng-controller="Main">
+<dev class="znk-image-audio-wrapper">
     <znk-image-audio image="d.image"
-                         blurred-image="d.blurredImage"
-                         audio="d.audio"
-                         auto-play="true"
-                         on-ended="d.onAudioEnded()">
+                     allow-replay="true"
+                     blurred-image="d.blurredImage"
+                     audio="d.audio"
+                     auto-play="true"
+                     on-ended="d.onAudioEnded()">
     </znk-image-audio>
+</dev>
 </body>
 </html>
