--- a/demo/znkAudioPlayer/index.html
+++ b/demo/znkAudioPlayer/index.html
@@ -21,10 +21,8 @@
 <dev class="znk-image-audio-wrapper">
     <znk-image-audio image="d.image"
                      allow-replay="true"
-                     blurred-image="d.blurredImage"
                      audio="d.audio"
-                     auto-play="false"
-                     on-ended="d.onAudioEnded()">
+                     auto-play="false">
     </znk-image-audio>
 </dev>
 
