--- a/demo/exerciseDataGetters/index.html
+++ b/demo/exerciseDataGetters/index.html
@@ -67,6 +67,8 @@
     <script src="angular-animate/angular-animate.js"></script>
     <script src="Swiper/dist/js/swiper.js"></script>
     <script src="firebase/firebase.js"></script>
+    <script src="angular-translate/angular-translate.js"></script>
+    <script src="angular-translate-loader-partial/angular-translate-loader-partial.js"></script>
     <!-- endbower -->
 
     <script src="main.js"></script>
