--- a/demo/znkAudioPlayer/index.html
+++ b/demo/znkAudioPlayer/index.html
@@ -32,6 +32,8 @@
 <script src="svgIcon/svgIcon.js"></script>
 <script src="znkAudioPlayer/znkAudioPlayer.js"></script>
 <script src="znkAudioPlayer/templates.js"></script>
+<script src="angular-translate/angular-translate.js"></script>
+<script src="angular-translate-loader-partial/angular-translate-loader-partial.js"></script>
 
 <script src="demo.js"></script>
 </body>
